[package]
name = "ads1x15"
description = "I2C driver for the Texas Instruments ADS1015/ADS1115 ADC"
repository = "https://github.com/dflemstr/ads1x15"
keywords = ["i2c", "adc", "ads1015", "ads1115", "analog"]
categories = ["embedded", "hardware-support"]
version = "0.1.1-alpha.0"
license = "MIT"
authors = ["David Flemström <david.flemstrom@gmail.com>"]

[dependencies]
i2cdev = "0.4.0"
bitflags = "1.0.3"
failure = "0.1.1"
byteorder = "1.2.3"
