[package]
name = "ads1x15"
description = "I2C driver for the Texas Instruments ADS1015/ADS1115 ADC"
repository = "https://github.com/dflemstr/ads1x15"
keywords = ["i2c", "adc", "ads1015", "ads1115", "analog"]
categories = ["embedded", "hardware-support"]
version = "0.3.1-alpha.0"
license = "MIT"
authors = ["David Flemström <david.flemstrom@gmail.com>"]

[dependencies]
i2cdev = "0.4.0"
bitfield-register = "0.2.1"
bitfield-register-macro = "0.2.1"
byteorder = "1.2.3"
qutex = "0.2.1"
futures-await = "0.1.1"
tokio-timer = "0.2.4"

[dev-dependencies]
tokio = "0.1.7"
